<resources>
    <string name="app_name">RssFeed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav_label">Home</string>
    <string name="categories_nav_label">Categories</string>
    <string name="bottom_nav_bookmarked">Bookmarked</string>
    <string name="bottom_nav_add_feed">New Feed</string>
    <string name="bottom_nav_categories">Categories</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_home">Home</string>
    <string name="all_error_title">Technical Error</string>
    <string name="all_error_description">Something went wrong!</string>
</resources>
