<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionList"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_home"/>

    <item
        android:id="@+id/actionBookmarked"
        android:icon="@drawable/ic_bookmark_white"
        android:title="@string/bottom_nav_bookmarked"/>
    <item
        android:id="@+id/actionAdd"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_add_feed"/>
    <item
        android:id="@+id/actionCategory"
        android:icon="@drawable/ic_list"
        android:title="@string/bottom_nav_categories"/>
    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/bottom_nav_settings" />
</menu>